# croncpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  lgtm.yml
benchmark/: CMakeLists.txt  main.cpp
include/: croncpp.h
test/: CMakeLists.txt  main.cpp  test_oracle.cpp  test_standard.cpp
